--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,19 +51,24 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.1'
-    implementation platform('androidx.compose:compose-bom:2023.03.00')
+
+    implementation platform('androidx.compose:compose-bom:2023.04.01')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
+
     implementation 'androidx.compose.material3:material3:1.1.0-rc01'
+    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.31.0-alpha'
     def nav_version = "2.5.3"
     implementation "androidx.navigation:navigation-compose:$nav_version"
     def coil_version = "2.3.0"
     implementation "io.coil-kt:coil-compose:$coil_version"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
+
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.04.01')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
