--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,13 +52,15 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.1'
 
-    implementation platform('androidx.compose:compose-bom:2023.04.01')
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
+    def compose_version = "1.5.0-alpha03"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-graphics:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.foundation:foundation:$compose_version"
 
     implementation 'androidx.compose.material3:material3:1.1.0-rc01'
-    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.31.0-alpha'
+    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.31.1-alpha'
     def nav_version = "2.5.3"
     implementation "androidx.navigation:navigation-compose:$nav_version"
     def coil_version = "2.3.0"
@@ -68,8 +70,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    androidTestImplementation platform('androidx.compose:compose-bom:2023.04.01')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.5.0-alpha03'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.5.0-alpha03'
 }
