--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     def coil_version = "2.3.0"
     implementation "io.coil-kt:coil-compose:$coil_version"
 
+    implementation 'io.insert-koin:koin-androidx-compose-navigation:3.4.4'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
