--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'tw.mason.mcdonalds'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "tw.mason.mcdonalds"
         minSdk 28
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -48,30 +48,30 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.1'
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.0'
+    implementation 'androidx.activity:activity-compose:1.9.0'
 
-    def compose_version = "1.5.0-alpha03"
+    def compose_version = '1.6.7'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-graphics:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.foundation:foundation:$compose_version"
 
-    implementation 'androidx.compose.material3:material3:1.1.0-rc01'
-    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.31.1-alpha'
-    def nav_version = "2.5.3"
+    implementation 'androidx.compose.material3:material3:1.2.1'
+    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.34.0'
+    def nav_version = '2.7.7'
     implementation "androidx.navigation:navigation-compose:$nav_version"
-    def coil_version = "2.3.0"
+    def coil_version = '2.6.0'
     implementation "io.coil-kt:coil-compose:$coil_version"
 
-    implementation 'io.insert-koin:koin-androidx-compose-navigation:3.4.4'
+    implementation 'io.insert-koin:koin-androidx-compose-navigation:3.5.6'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.5.0-alpha03'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.5.0-alpha03'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.6.7'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.6.7'
 }
